src/test/resources/annotator/invalid_block_children.dig
timezone: UTC

+step1:
  sh>: <error descr="Invalid child element in a block mapping">tasks/sample.sh
    invalid: foo</error>
  foo: this is ok
